--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = 1.0.0
 author = Brendan Chabannes
 author_email = brendan.chabannes@hey.com
 description = Synthèse des lignes de décharges
-license = file: LICENSE
+license = 'LICENSE'
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/Brndan/pydecharge
