--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ package_dir =
 packages = find:
 python_requires = >=3.6
 install_requires = openpyxl
+scripts= bin/pydecharge
 
 [options.packages.find]
 where = src
