--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,10 @@ package_dir =
 packages = find:
 python_requires = >=3.6
 install_requires = openpyxl
-scripts= bin/pydecharge
 
 [options.packages.find]
 where = src
+
+[options.entry_points]
+console_scripts =
+    pydecharge = pydecharge.__main__:main
